src/styles.css
*,
:root {
  --dark: #12121f;
  --dark-gray: #303133;
  --light: #f7f8fc;
  --accent: #380082;
  --modal: #3949ab;
  --sections: #1f85b4;
  --text: #f5f5f5;
}

::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

code {
  font-family: "Montserrat", source-code-pro, Menlo, Monaco, Consolas,
    "Courier New", monospace;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--dark-gray);
  color: var(--white);
}

h1,
h2,
h3 {
  padding: 10px;
  margin: 10px;
}

/* Paragraph text class for large screens */
.body-text {
  color: var(--text);
  padding: 20px 100px 20px;
  text-align: center;
}

/* Container for grid text */
.grid-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 1fr, 1fr;
  grid-column-gap: 20px;
  margin: 10px 100px 10px; 
  justify-content: center;
  justify-items: center;
}

/* Class for all grid items */
.grid-items{
  display: flex;
  color: var(--text);
  padding: 20px;
  border: 1px var(--sections) solid;
}

/* Grid Items */
.grid1 {
  grid-column: 1 / 2;
  flex-wrap: wrap;
  min-width: 150px;
}
.grid2 {
  grid-column: 2 / 3;
  flex-wrap: wrap;
  min-width: 150px;
}
.grid3 {
  grid-column: 1 / 3;
}

/* Paragraph text class for small screens */
@media only screen and (max-width: 800px) {
  .body-text {
    color: var(--text);
    padding: 20px 50px 20px;
    text-align: center;
  }
}

/* Underline class */
.underline {
  width: 5rem;
  height: 0.25rem;
  background: var(--sections);
  margin-left: auto;
  margin-right: auto;
}

/* Heading class for page headings */
.heading {
  font-family: "Montserrat", sans-serif;
  font-size: 3.2rem;
  display: flex;
  color: var(--text);
  justify-content: center;
  padding-top: 1rem;
  text-shadow: 0px 4px 4px rgba(122, 123, 126, 0.45);
}

/* Container for buttons */
.btn-container {
  height: 100%;
  width: 100vw;
  display: flex;
  justify-content: center;
}

/* Main button styles for entire site */
.btn {
  background: transparent;
  border-color: transparent;
  width: 14rem;
  height: 4.5rem;
  min-width: 6rem;
  min-height: 2rem;
  background: var(--sections);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
  color: var(--text);
  cursor: pointer;
  align-self: center;
  box-shadow: 0px 4px 4px rgba(59, 75, 119, 0.45);
  text-shadow: 0px 4px 4px rgba(110, 147, 221, 0.45);
  outline-style: none;
  text-align: center;
  margin: 8% 0;
  font-size: 1.5rem;
}

/* Heading text for home page */
.home-header {
  font-family: "Montserrat", sans-serif;
  font-size: 3.2rem;
  display: flex;
  color: var(--text);
  justify-content: center;
  padding-top: 15rem;
  text-shadow: 0px 4px 4px rgba(122, 123, 126, 0.45);
}

/* Decreasing font size for smaller screens */
@media only screen and (max-width: 450px) {
  .home-header {
    font-size: 2rem;
  }
}

/* Container class for Home component */
.home-container {
  position: relative;
  overflow: hidden;
  height: 100vh;
}

/* Main container class for all components */
.container {
  position: relative;
  overflow: hidden;
  margin: 20px;
}

/* Spacing between About us and Contact */
.container:first-child {
  margin-bottom: 50px;
}

/* Transparent overlay class for content on home page */
.content {
  position: absolute;
  top: 0;
  color: #f1f1f1;
  background-color: rgba(0, 0, 0, 0.7);
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
  max-width: 100%;
}

/* Aligning sub content on home page */
.sub-content {
  text-align: center;
  padding: 10px;
}

/* Home page background video */
.bg-video {
  position: absolute;
  right: 0;
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
}

/* Home page background image for smaller screens */
.bg-img {
  width: 100%;
  height: 100vh;
}

/* Accordian for customer details */
.customer-details {
  padding: 1rem 1.5rem;
  border: 2px solid rgb(173, 173, 173);
  margin-bottom: 1rem;
  border-radius: 0.25rem;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.45);
}
.customer-details h4 {
  text-transform: none;
  line-height: 1.5;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.45);
}

.customer-details p:first-child:before {
  content: " ";
  display: block;
  border-bottom: 1px solid black;
  width: 25%;
}

.customer-details p {
  color: var(--dark-gray);
  margin-bottom: 0;
  margin-top: 0.5rem;
  font-weight: bold;
}

.customer-details header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.customer-details header h4 {
  margin-bottom: 0;
}

.key {
  color: var(--accent);
  text-shadow: 0px 4px 4px rgba(79, 6, 88, 0.45);
}

.ac-btn {
  background: transparent;
  border-color: transparent;
  width: 2rem;
  height: 2rem;
  background: var(--sections);
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  color: var(--text);
  cursor: pointer;
  margin-left: 1rem;
  align-self: center;
  min-width: 2rem;
  box-shadow: 0px 4px 4px rgba(59, 75, 119, 0.45);
  outline-style: none;
}

